add instructions to how install and run managed server creation